--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,33 +1,47 @@
 main {
     display: flex;
-    --font-family: 'National 2 Condensed', 'Imperial';
+    flex-direction: column; 
     align-items: center;
     justify-content: center;
     padding: 9vw;
-    max-width: 100%; 
+    max-width: 100%;
+}
+
+header {
+    padding-top: 20px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    font-size: 36px;
 }
 
 .menuCategory {
-    display: flex; 
+    display: flex;
+    flex-wrap: wrap; 
     justify-content: space-between;
-    gap: 2%; 
-    height: auto; 
+    gap: 2%;
+    height: auto;
 }
 
 .menuCategory button {
-    flex: 1; 
-    max-width: 100%; 
+    flex-basis: calc(25% - 2%); 
+    max-width: calc(25% - 2%);
     box-shadow: rgba(140, 75, 101, 0.24) 2px 4px 4px 2px;
     background-color: rgb(255, 255, 255);
     border-color: white;
+    margin-bottom: 20px;
 }
 
+.menuCategory button:hover {
+    cursor: pointer;
+}
 
 .menuCategory button img {
     max-width: 100%;
+    max-height: 200px;
 }
 
 .menuCategory button h4 {
     text-align: center;
-    font-family: var(--font-family);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 24px;
 }
