--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,68 @@
-main {
+header {
     display: flex;
-    flex-direction: column; 
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    padding: 9vw;
-    max-width: 100%;
+    max-width: 90%;
+    height: 100%;
+    padding-top: 20px;
+    padding-bottom: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
 }
 
-header {
-    padding-top: 20px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+nav {
+    justify-content: center;
+    align-items: center;
+
+}
+nav a {
+    font-weight: 700;
+    font-size: 18px;
+    color: black;
+    text-decoration: none;
+    margin: 30px;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+.orderBtn {
+    font-size: 18px;
+    color: white;
+    border-radius: 50px;
+    padding: 10px 60px;
+    background-color: red;
+}
+
+.orderBtn:hover {
+    background-color: rgba(255, 0, 0, 0.836);
+    cursor: pointer;
+}
+
+body h2 {
+    padding: 30px 0 30px 0;
     text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 36px;
+}
+
+.header-links {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.header-links a {
+    font-weight: 700;
+    font-size: 18px;
+    color: black;
+    text-decoration: none;
+    margin: 20px;
+}
+
+.header-links a:hover {
+    text-decoration: underline;
 }
 
 .menuCategory {
