--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     max-width: 90%;
     height: 100%;
@@ -9,11 +8,14 @@ header {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
 }
-
+header img {
+    flex-grow: 1;
+    max-width: 200px;
+}
 nav {
     justify-content: center;
     align-items: center;
-
+    flex-grow: 2;
 }
 nav a {
     font-weight: 700;
@@ -28,6 +30,7 @@ nav a:hover {
 }
 
 .orderBtn {
+    flex-grow: 0;
     font-size: 18px;
     color: white;
     border-radius: 50px;
@@ -96,3 +99,49 @@ body h2 {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 24px;
 }
+
+.cartBtn {
+    margin: 0 20px 0 20px;
+    flex-grow: 0;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
